minor fix, missing a class

--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
         </div>
 
         <div class="proyectos">
-            <h2>Datos sobre la República Dominica<h2>
-                    <p> En esta pagina yo hablo sobre la Republica Dominicana. y en esta pagina aprendí a poner estilo.
-                    </p>
+            <h2>Datos sobre la República Dominica</h2>
+                    <p> En esta pagina yo hablo sobre la Republica Dominicana. y en esta pagina aprendí a poner estilo.</p>
                     <a href="/yonairyportfolio21/Proyectos/U1.L3.html"><button>VISITALO AQUI</button></a>
         </div>
 
@@ -50,7 +49,7 @@
                 <a href="/yonairyportfolio21/Proyectos/U2.L3/Blancanieves.html"><button>VISITALO AQUI</botton> </a>
         </div>
 
-        <div>
+        <div class="proyectos">
             <h2> Proyecto final</h2>
             <h3> Trabajo Final del Programa.</h3>
             <p> En mi pagina hay p,hay encabezados tambien hay listas desordenadas y etc. </p>
