fixed button bug

--- a/Proyectos/U1proyectofinal_Yonairy/Receta1.html
+++ b/Proyectos/U1proyectofinal_Yonairy/Receta1.html
@@ -54,7 +54,7 @@
         <h6>"Esta receta fue copiada de www.kiwilimon.com"</h6>
 
 
-        <a href=" inicio.html">  <button> Volver a inicio </button></a>
+        <a href="Inicio.html">  <button> Volver a inicio </button></a>
 
     </div>
 
