fixed button bug

--- a/Proyectos/U1proyectofinal_Yonairy/Receta2.html
+++ b/Proyectos/U1proyectofinal_Yonairy/Receta2.html
@@ -70,7 +70,7 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
 
-     <a href=" inicio.html"> <button> Volver a inicio</button></a>
+     <a href="Inicio.html"> <button> Volver a inicio</button></a>
 
         <h6 style="background-color: rgb(16, 75, 153);"></h6> " Mi receta fue copiada de la pagina www.kiwilimon.com"</h6>
 
