--- a/Proyectos/U1proyectofinal_Yonairy/Receta3.html
+++ b/Proyectos/U1proyectofinal_Yonairy/Receta3.html
@@ -43,7 +43,7 @@
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
 
-                <a href=" inicio.html"> <button> Vover a inicio</button></a>
+                <a href="Inicio.html"> <button> Vover a inicio</button></a>
      
              <h6> " mi receta fue copiada de la pagina www.kiwilimon.com</h6>   
 
