--- a/Proyectos/U1proyectofinal_Yonairy/Receta4.html
+++ b/Proyectos/U1proyectofinal_Yonairy/Receta4.html
@@ -58,7 +58,7 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
 
-            <a href=" inicio.html"> <button> Volver a inicio</button></a>
+            <a href="Inicio.html"> <button> Volver a inicio</button></a>
 
         <h6>" Mi receta fue copiada de la pagina www.kiwilimon.com "</h6>
 
