--- a/Proyectos/U1proyectofinal_Yonairy/Receta4.html
+++ b/Proyectos/U1proyectofinal_Yonairy/Receta4.html
@@ -11,7 +11,7 @@
     <h1 style="font-size: 800%;color :rgb(72, 155, 223)"> Pastelon de platano maduro</h1>
     <p style="font-size: 100%;color :rgb(93, 243, 23)">Mi receta es pastelon y lo escoji porque me gusta mucho</p>
 
-    <img src="Pastelon.jpg" width="500" height="400" alt=" Una imagen de un  pastelon de platano maduro ">
+    <img src="pastelon.jpg" width="500" height="400" alt=" Una imagen de un  pastelon de platano maduro ">
 
     <div style="font-family: cursive;">
 
